<resources>
    <string name="app_name">ShakeWake</string>

    // home screen

    <string name="next_alarm">Next Alarm</string>
    <string name="daily_alarm">Daily</string>
    <string name="once_alarm">Once</string>
    <string name="title_delete">Delete Alarm?</string>
    <string name="delete_builder_delete">Delete</string>
    <string name="delete_builder_alarm_deleted">Alarm Deleted</string>
    <string name="toast_alarm_set">Alarm set for</string>
    <string name="toast_alarm_cancelled">Alarm cancelled</string>


    // set/update new alarm screen

    <string name="set_new_alarm">Set New Alarm</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="once">Once</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="update_alarm">Update</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    // alarm ring screen

    <string name="cancel_alarm">Cancel</string>
    <string name="snooze_alarm">Snooze</string>

    // settings screen

    <string name="title_general_settings">General Settings</string>
    <string name="title_dark_theme">Dark Theme</string>
    <string name="summary_dark_theme">set dark theme</string>
    <string name="language_select">Language</string>

    <string name="title_alarm_settings">Alarm Settings</string>
    <string name="set_ringtone">Set Ringtone</string>
    <string name="snooze_length">Snooze Length</string>
    <string name="vibrate_on">Vibrate</string>
    <string name="shake_to_wake">shake to cancel </string>
    <string name="alarm_volume">Alarm Volume</string>

    // notification text

    <string name="notification_title">Alarm</string>
    <string name="notification_content">Click here to open alarm </string>
    <string name="add_new_alarm">Add new alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="plus">+</string>
    <string name="toast_alarm_set2">" "</string>
    <string name="days" translatable="false">Days</string>
    <string name="no_alarms" translatable="false">no alarms currently set</string>

</resources>