<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <!--   time picker     -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/timepicker_card"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginHorizontal="@dimen/layout_margin_large"
        android:layout_marginVertical="@dimen/layout_margin_extra_large"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/elevation"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/stroke"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TimePicker
            android:id="@+id/add_alarm_timePicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:elevation="31dp"
            android:theme="@style/NumberPickerStyle"
            android:timePickerMode="spinner" />

    </com.google.android.material.card.MaterialCardView>

    <!--    alarm options   -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_alarm_settings_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_extra_large"
        app:cardBackgroundColor="?android:colorPrimary"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timepicker_card"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/stroke_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/add_alarm_tv_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:padding="8dp"
                android:text="@string/days"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/add_alarm_switch_days"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="22dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/daily_alarm"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/add_alarm_tv_recurring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:padding="8dp"
                android:text="@string/recurring"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/add_alarm_tv_days"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/add_alarm_switch_recurring"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:checked="false"
                app:layout_constraintTop_toBottomOf="@id/add_alarm_tv_days"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/add_alarm_tv_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:padding="8dp"
                android:text="@string/vibrate_on"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/add_alarm_tv_recurring"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/add_alarm_switch_vibrate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:checked="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/add_alarm_tv_recurring"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/add_alarm_tv_snooze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:padding="8dp"
                android:text="@string/snooze_length"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/add_alarm_tv_vibrate"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/add_alarm_switch_snooze"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:defaultValue="none"
                android:entries="@array/snooze_entries"
                android:entryValues="@array/snooze_values"
                android:key="lp_snooze"
                android:padding="8dp"
                android:popupBackground="@color/black"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
                android:layout_weight="1"
                android:summary="%s"
                app:layout_constraintTop_toBottomOf="@id/add_alarm_tv_vibrate"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/add_alarm_tv_shake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:padding="8dp"
                android:text="@string/shake_to_wake"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/add_alarm_tv_snooze"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/add_alarm_switch_shake"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:checked="false"
                app:layout_constraintTop_toBottomOf="@id/add_alarm_tv_snooze"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--    set alarm button   -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_alarm_btn_set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_margin_extra_large"
        android:text="@string/set_alarm"
        android:textColor="@color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/stroke_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>