<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fragment_update_alarm_timePickerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="25dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="5dp">

                <TimePicker
                    android:id="@+id/fragment_update_alarm_timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:elevation="31dp"
                    android:theme="@style/NumberPickerStyle"
                    android:timePickerMode="spinner" />

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_alarm_settings_cardview"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="?android:colorPrimary"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_update_alarm_timePickerLayout"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/days"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragment_create_alarm_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="8dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/recurring"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_alarm_days" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragment_update_alarm_recurring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_alarm_days" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="8dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/vibrate_on"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_update_alarm_recurring" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragment_create_alarm_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:checked="false"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_update_alarm_recurring" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="8dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/snooze_length"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_alarm_vibrate" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:prompt="@string/next_alarm"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_alarm_vibrate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="8dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/shake_to_wake"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragment_create_alarm_shake_to_wake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:checked="false"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fragment_btn_update_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="90dp"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/update_alarm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>